taking longer than expected

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,28 +13,12 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from scipy.interpolate import interp1d #pre written interpolation function\n",
-    "from scipy.interpolate import griddata\n",
-    "from scipy.interpolate import LinearNDInterpolator"
+    "from scipy.interpolate import griddata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 2.]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,78 +26,160 @@
     "GAMMA = .5772 #euler's constant\n",
     "THETA = 1.1\n",
     "N = 7\n",
-    "BIDS = np.arange(1,16)\n",
-    "STATES = np.arange(1,11)"
+    "BIDS = np.arange(1,16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def enum_other_states(n, min_s, max_s):\n",
+    "    \"\"\"enumerate the state. for all palyers except player i\n",
+    "    (1,1,2) is equivalent to (1,2,1) from firm 1's pespective\"\"\"\n",
+    "    \n",
+    "    states_i = range(min_s,max_s)\n",
+    "    if n <=1:\n",
+    "        states = [[i] for i in states_i]\n",
+    "        return states\n",
+    "    else:\n",
+    "        states = []\n",
+    "        states_j = enum_other_states(n-1,min_s,max_s)\n",
+    "        for i in states_i:\n",
+    "            for j in states_j:\n",
+    "                if j[0] >= i:\n",
+    "                    state_ij = [i] + j \n",
+    "                    states.append(state_ij)\n",
+    "        return states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5]\n"
+      "[[1 1]\n",
+      " [1 2]\n",
+      " [2 2]]\n",
+      "[1 1 1 2 2 2]\n"
      ]
     }
    ],
    "source": [
-    "from scipy.interpolate import LinearNDInterpolator\n",
-    "f= LinearNDInterpolator([ [1,1],[2,1],[1,2],[2,2] ], [0,1,1,2] )\n",
-    "print f([1,1.5])"
+    "states = []\n",
+    "\n",
+    "max_s =3\n",
+    "min_s =1\n",
+    "n = 3\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print other_states\n",
+    "\n",
+    "\n",
+    "print my_states"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3.1 3.2]\n",
-      "[0. 0.]\n",
-      "[0 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def cost(states, shock):\n",
-    "    return THETA*states + shock\n",
+    "class States:\n",
+    "    \"\"\"class for dealing with the states\n",
+    "    these things are apparently really complex\n",
+    "    there are just a ton of them\"\"\"\n",
+    "    \n",
+    "    my_states = np.array([]) #type nparray\n",
+    "    other_states = np.array([[]]) #type np array 2d\n",
+    "    \n",
+    "    \n",
+    "    def __init__(self, n, min_s,max_s):\n",
+    "        \"\"\"compute all relevant states for firm i\n",
+    "        the trick is ommiting equivalent states\n",
+    "        this is taken care of in the helper function\n",
+    "    \n",
+    "        pre condition: more than 2 firms\"\"\"\n",
+    "        other_states =  np.array(enum_other_states(n-1,min_s,max_s))\n",
+    "        my_states = np.arange(min_s,max_s)\n",
+    "        my_states = np.tile(my_states,len(other_states))\n",
+    "        my_states = np.sort(my_states)\n",
+    "        \n",
+    "        other_states = other_states.reshape((1,other_states.shape[0],other_states.shape[1]))\n",
+    "        other_states = np.tile(other_states,(max_s - min_s,1,1))\n",
+    "        other_states = other_states.reshape(other_states.shape[1]*(max_s - min_s),other_states.shape[0])\n",
+    "        self.other_states = other_states\n",
+    "        \n",
+    "    \n",
+    "    def __init__(self, my_states, other_states):\n",
+    "        \"\"\"special initializer for\"\"\"\n",
+    "        self.my_states = np.array(my_states)\n",
+    "        self.other_states = np.sort(other_states,axis=1)\n",
+    "    \n",
+    "\n",
+    "    def update(self, my_states, other_states):\n",
+    "        \"\"\"ensures other_states are in descending order\n",
+    "        this is meant to avoid duplicate states\n",
+    "        \n",
+    "        avoid side effects by returning a new copy\"\"\"\n",
+    "        return States(my_states,other_states)\n",
+    "        \n",
+    "    \n",
+    "    def get_all(self):\n",
+    "        \"\"\"return all the states\"\"\"\n",
+    "        reshaped_states = self.my_states.reshape((len(self.my_states),1))\n",
+    "        return np.concatenate( (reshaped_states, self.other_states), axis=1 )\n",
     "\n",
     "\n",
-    "def profit(contract, bids, states, shock):\n",
-    "    return contract*( bids< np.min(bids) )*(bids - cost(states,shock))  \n",
-    "\n",
-    "\n",
-    "def backlog(contract, bids, states):\n",
-    "    return contract*(  bids< np.min(bids) ) + states\n",
-    "\n",
-    "\n",
-    "print cost(np.array([1,2]),np.array([2,1]))\n",
-    "print profit(1,np.array([4,5]),np.array([0,1]),np.array([1,2]))\n",
-    "print backlog(1,np.array([4,5]),np.array([0,1]))"
+    "yo = States([1,2,3],[[1,2,3],[2,1,2],[2,1,2]])\n",
+    "print yo.get_all() \n",
+    "yo2 = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3.1 3.2]\n",
-      "-0.10000000000000009\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "thing = make_states(3,1,6)\n",
+    "print thing\n",
+    "print griddata(thing, np.ones(len(thing)), [[1.1,1.3,2.5]], method='linear')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_bids(policy, states):\n",
+    "    \"\"\"return the other players bids\n",
+    "    given the state\"\"\"\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "def fix_state():\n",
+    "    \"\"\"reorganize so that other states are\n",
+    "    ascending required for interpolation\"\"\"\n",
+    "\n",
+    "    \n",
+    "def create_function(grid):\n",
+    "    \"\"\"returns a function\n",
+    "    the function uses the grid data to figure out return value\"\"\"\n",
+    "    thing = make_states(3,1,6)\n",
+    "    print thing\n",
+    "    print griddata(thing, np.ones(len(thing)), [[1.1,1.3,2.5]], method='linear')\n",
+    "    \n",
+    "    \n",
     "def cost(states, shock):\n",
     "    \"\"\" states are all states, the shock is just an integer\"\"\"\n",
     "    return THETA*states + shock\n",
@@ -123,78 +189,50 @@
     "    \"\"\"this returns the same dimension as my bid\n",
     "    \n",
     "    will need to tile bids if evaluating multiple at once\"\"\"\n",
-    "    return contract*( my_bid < np.min(other_bids) )*( my_bid - cost(state,shock) )  \n",
-    "\n",
-    "\n",
-    "def backlog(contract, my_bid, other_bids, state):\n",
-    "    \"\"\"this returns the same dimension as my bid\n",
-    "    \n",
-    "     will need to tile bids if evaluating multiple at once\"\"\"\n",
-    "    return np.minimum( np.max(STATES), contract*(  my_bid < np.min(other_bids) ) + state )\n",
-    "\n",
-    "\n",
-    "print cost(np.array([1,2]),np.array([2,1]))\n",
-    "print profit(1,2,np.array([4,5]),1,1)\n",
-    "print backlog(1,2,np.array([4,5]),1)"
+    "    return contract*( my_bid < np.min(other_bids) )*( my_bid - cost(state,shock) )  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[6, 6, 6, 6, 6, 6, 6],\n",
-       "        [6, 6, 6, 6, 6, 6, 6],\n",
-       "        [6, 6, 6, 6, 6, 6, 6],\n",
-       "        [6, 6, 6, 6, 6, 6, 6],\n",
-       "        [6, 6, 6, 6, 6, 6, 6],\n",
-       "        [7, 7, 7, 7, 7, 7, 7],\n",
-       "        [7, 7, 7, 7, 7, 7, 7],\n",
-       "        [7, 7, 7, 7, 7, 7, 7],\n",
-       "        [7, 7, 7, 7, 7, 7, 7],\n",
-       "        [7, 7, 7, 7, 7, 7, 7]]), array([[4.9, 4.9, 4.9, 4.9, 4.9, 4.9, 4.9],\n",
-       "        [3.8, 3.8, 3.8, 3.8, 3.8, 3.8, 3.8],\n",
-       "        [2.7, 2.7, 2.7, 2.7, 2.7, 2.7, 2.7],\n",
-       "        [1.6, 1.6, 1.6, 1.6, 1.6, 1.6, 1.6],\n",
-       "        [2.3, 2.3, 2.3, 2.3, 2.3, 2.3, 2.3],\n",
-       "        [1.8, 1.8, 1.8, 1.8, 1.8, 1.8, 1.8],\n",
-       "        [1.8, 1.8, 1.8, 1.8, 1.8, 1.8, 1.8],\n",
-       "        [1.8, 1.8, 1.8, 1.8, 1.8, 1.8, 1.8],\n",
-       "        [1.8, 1.8, 1.8, 1.8, 1.8, 1.8, 1.8],\n",
-       "        [1.8, 1.8, 1.8, 1.8, 1.8, 1.8, 1.8]]))"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def operator(initial_values, initial_policies):\n",
+    "def backlog(contract, my_bid,  other_bids, state):\n",
+    "    \"\"\"this returns the same dimension as my bid\n",
+    "    \n",
+    "     will need to tile bids if evaluating multiple at once\"\"\"\n",
+    "    \n",
+    "    ##tile the other bids so that I can evalute this expression for each bid\n",
+    "    #tile the states so I can evaluate this expression for each bid at each state\n",
+    "    \n",
+    "    return np.minimum( np.max(STATES), contract*(  my_bid < np.min(other_bids) ) + state )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operator(initial_value, initial_policy):\n",
     "    \"\"\"Calculate the value of the \n",
     "    Bellman operator in the value function\n",
     "    \n",
     "    update the value function and the policy function\n",
-    "    for player i, given the other players value and policy\n",
-    "    functions\"\"\"\n",
+    "    for player i functions\n",
+    "    \n",
+    "    since we are looking for symmetric eq, there is really just 1\n",
+    "    policy and value to keep track of\"\"\"\n",
     "    \n",
     "    #initialize contract and state to 0\n",
     "    contract = 1\n",
     "    shock = 0\n",
     "    \n",
-    "    #possible states for just one player\n",
-    "    states = STATES.reshape((1,len(STATES),1))\n",
-    "    states = np.tile(states, (len(BIDS),1,N))\n",
-    "    \n",
     "    #possible bids for all states, again 1 player\n",
-    "    bids = BIDS.reshape((len(BIDS), 1, 1))\n",
-    "    bids = np.tile(bids,(1,len(STATES),N))\n",
+    "    bids = BIDS.reshape((len(BIDS), 1, ))\n",
+    "    bids = np.tile(bids,(1,len(STATES)))\n",
     "    \n",
-    "    #interpolate for easy access to value function\n",
-    "    value = interp1d(STATES,initial_values)\n",
     "    \n",
     "    #calculate value of each bid and take max in each state\n",
     "    v_next = profit(contract,bids,other_bids,states,shock)\n",
@@ -211,40 +249,9 @@
     "\n",
     "#initialize policy as something else\n",
     "foo_policy = lambda state: 5\n",
-    "foo_bids = [foo_policy]*(N)\n",
+    "foo_value = lambda state: 0\n",
     "\n",
-    "v0 = np.concatenate((np.zeros(5),2*np.ones(5)))\n",
-    "operator(v0, foo_bids )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 3])"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nash_equilibrium(value_function):\n",
-    "    \"\"\"given the value function \n",
-    "    find the symmetric nash equilibrium\n",
-    "    in each state\"\"\""
+    "operator(foo_value, foo_policy)"
    ]
   },
   {
