--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,39 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 1]\n",
-      " [1 2]\n",
-      " [2 2]]\n",
-      "[1 1 1 2 2 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "states = []\n",
-    "\n",
-    "max_s =3\n",
-    "min_s =1\n",
-    "n = 3\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "print other_states\n",
-    "\n",
-    "\n",
-    "print my_states"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,87 +65,170 @@
     "    these things are apparently really complex\n",
     "    there are just a ton of them\"\"\"\n",
     "    \n",
-    "    my_states = np.array([]) #type nparray\n",
-    "    other_states = np.array([[]]) #type np array 2d\n",
-    "    \n",
-    "    \n",
-    "    def __init__(self, n, min_s,max_s):\n",
-    "        \"\"\"compute all relevant states for firm i\n",
-    "        the trick is ommiting equivalent states\n",
-    "        this is taken care of in the helper function\n",
-    "    \n",
-    "        pre condition: more than 2 firms\"\"\"\n",
-    "        other_states =  np.array(enum_other_states(n-1,min_s,max_s))\n",
-    "        my_states = np.arange(min_s,max_s)\n",
-    "        my_states = np.tile(my_states,len(other_states))\n",
-    "        my_states = np.sort(my_states)\n",
-    "        \n",
-    "        other_states = other_states.reshape((1,other_states.shape[0],other_states.shape[1]))\n",
-    "        other_states = np.tile(other_states,(max_s - min_s,1,1))\n",
-    "        other_states = other_states.reshape(other_states.shape[1]*(max_s - min_s),other_states.shape[0])\n",
-    "        self.other_states = other_states\n",
-    "        \n",
-    "    \n",
-    "    def __init__(self, my_states, other_states):\n",
-    "        \"\"\"special initializer for\"\"\"\n",
-    "        self.my_states = np.array(my_states)\n",
-    "        self.other_states = np.sort(other_states,axis=1)\n",
+    "    my_states = None #type nparray\n",
+    "    other_states = None #type np array 2d\n",
+    "    n = 0 #number of players\n",
+    "    max_state = 0\n",
+    "    min_state = 0\n",
     "    \n",
     "\n",
-    "    def update(self, my_states, other_states):\n",
-    "        \"\"\"ensures other_states are in descending order\n",
-    "        this is meant to avoid duplicate states\n",
+    "    def __init__(self, n, min_s,max_s):\n",
+    "        \"\"\"initialize important class attributes\"\"\"\n",
+    "        self.n, self.min_states, self.max_states = n, min_s, max_s\n",
+    "      \n",
+    "    \n",
+    "    def gen_states(self):\n",
+    "        \"\"\"compute all relevant states for firm i\n",
+    "        the trick is ommiting equivalent states\n",
+    "        this is taken care of in the helper function\"\"\"\n",
     "        \n",
-    "        avoid side effects by returning a new copy\"\"\"\n",
-    "        return States(my_states,other_states)\n",
+    "        print 'yo'\n",
     "        \n",
+    "        #avoid typing self a million times\n",
+    "        n, min_s, max_s  = self.n, self.min_states, self.max_states\n",
+    "        \n",
+    "        #setup other states\n",
+    "        other_states =  np.array(enum_other_states(n-1,min_s,max_s))\n",
+    "        num_others = other_states.shape[0]\n",
+    "        \n",
+    "        #initialize my states based on this\n",
+    "        my_states = np.arange(min_s,max_s)\n",
+    "        my_states = np.repeat(my_states,num_others )\n",
+    "        self.my_states = my_states\n",
+    "        \n",
+    "        #copy other states enough times\n",
+    "        other_states = other_states.reshape((1,num_others,n-1))\n",
+    "        other_states = np.tile(other_states,(max_s - min_s,1,1))  \n",
+    "        other_states = other_states.reshape(num_others*(max_s - min_s),n-1)\n",
+    "        self.other_states = other_states\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def make_states(self, my_states, other_states):\n",
+    "        \"\"\"special initializer for states\n",
+    "        ensures they are not too big or too small\"\"\"\n",
+    "        \n",
+    "        assert np.array(other_states).shape[1] == (self.n -1)\n",
+    "        \n",
+    "        n, min_s, max_s  = self.n, self.min_states, self.max_states\n",
+    "        \n",
+    "        #make a copy to avoid side effects\n",
+    "        new_states = States(n,min_s,max_s)\n",
+    "        \n",
+    "        #ensure other my states are good\n",
+    "        my_states = np.array(my_states)\n",
+    "        my_states = np.minimum(max_s - 1, np.array(my_states))\n",
+    "        new_states.my_states = np.maximum(min_s, np.array(my_states))\n",
+    "        \n",
+    "        #ensure other states are good\n",
+    "        other_states = np.sort(other_states,axis=1)\n",
+    "        other_states = np.minimum(max_s - 1, np.array(other_states))\n",
+    "        new_states.other_states = np.maximum(min_s, np.array(other_states))\n",
+    "        \n",
+    "        return new_states\n",
+    "    \n",
+    "    \n",
+    "    def get_len(self):\n",
+    "        return len(self.other_states)\n",
+    "    \n",
     "    \n",
     "    def get_all(self):\n",
     "        \"\"\"return all the states\"\"\"\n",
     "        reshaped_states = self.my_states.reshape((len(self.my_states),1))\n",
-    "        return np.concatenate( (reshaped_states, self.other_states), axis=1 )\n",
-    "\n",
-    "\n",
-    "yo = States([1,2,3],[[1,2,3],[2,1,2],[2,1,2]])\n",
-    "print yo.get_all() \n",
-    "yo2 = "
+    "        return np.concatenate( (reshaped_states, self.other_states), axis=1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yo\n",
+      "6\n",
+      "6\n",
+      "[3. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "thing = make_states(3,1,6)\n",
-    "print thing\n",
-    "print griddata(thing, np.ones(len(thing)), [[1.1,1.3,2.5]], method='linear')"
+    "def create_function(states, values):\n",
+    "    \"\"\"returns a function\n",
+    "    the function uses the grid data to figure out return value\"\"\"\n",
+    "    f = lambda eval_states: griddata(states.get_all(), values, \n",
+    "                                     eval_states.get_all(), method='linear')\n",
+    "    return f\n",
+    "\n",
+    "\n",
+    "states = States(3,1,3)\n",
+    "states.gen_states()\n",
+    "new_states = states.make_states([1,2],[[1.5,1],[1,5]])\n",
+    "values = np.concatenate([3*np.ones(states.get_len()/2),np.ones(states.get_len()/2)])\n",
+    "print len(values)\n",
+    "print states.get_len()\n",
+    "policy = create_function(states, values)\n",
+    "print policy(new_states)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1]\n",
+      " [1 1 2]\n",
+      " [1 2 2]\n",
+      " [2 1 1]\n",
+      " [2 1 2]\n",
+      " [2 2 2]]\n",
+      "[[5 5]\n",
+      " [5 5]\n",
+      " [5 5]\n",
+      " [5 5]\n",
+      " [5 5]\n",
+      " [5 5]]\n"
+     ]
+    }
+   ],
    "source": [
-    "def calc_bids(policy, states):\n",
+    "def calc_bids(policy, states, n):\n",
     "    \"\"\"return the other players bids\n",
     "    given the state\"\"\"\n",
     "    \n",
+    "    other_bids = []\n",
+    "    for i in range(1,n):\n",
+    "        other_states = states.get_all()\n",
+    "        my_other = other_states[:,i]\n",
+    "        other = np.delete(other_states, i, axis=1)\n",
+    "        other_states = States(my_other, other)\n",
+    "        other_bids.append( policy(other_states) )\n",
+    "    return np.array(other_bids).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "    \n",
-    "    \n",
-    "def fix_state():\n",
-    "    \"\"\"reorganize so that other states are\n",
-    "    ascending required for interpolation\"\"\"\n",
     "\n",
-    "    \n",
-    "def create_function(grid):\n",
-    "    \"\"\"returns a function\n",
-    "    the function uses the grid data to figure out return value\"\"\"\n",
-    "    thing = make_states(3,1,6)\n",
-    "    print thing\n",
-    "    print griddata(thing, np.ones(len(thing)), [[1.1,1.3,2.5]], method='linear')\n",
     "    \n",
     "    \n",
     "def cost(states, shock):\n",
