--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,20 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BETA = .9\n",
-    "GAMMA = .5772 #euler's constant\n",
-    "THETA = 1.1\n",
-    "N = 7\n",
-    "BIDS = np.arange(1,16)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +55,8 @@
     "    my_states = None #type nparray\n",
     "    other_states = None #type np array 2d\n",
     "    n = 0 #number of players\n",
-    "    max_state = 0\n",
-    "    min_state = 0\n",
+    "    max_states = 0\n",
+    "    min_states = 0\n",
     "    \n",
     "\n",
     "    def __init__(self, n, min_s,max_s):\n",
@@ -81,8 +68,6 @@
     "        \"\"\"compute all relevant states for firm i\n",
     "        the trick is ommiting equivalent states\n",
     "        this is taken care of in the helper function\"\"\"\n",
-    "        \n",
-    "        print 'yo'\n",
     "        \n",
     "        #avoid typing self a million times\n",
     "        n, min_s, max_s  = self.n, self.min_states, self.max_states\n",
@@ -111,7 +96,6 @@
     "        assert np.array(other_states).shape[1] == (self.n -1)\n",
     "        \n",
     "        n, min_s, max_s  = self.n, self.min_states, self.max_states\n",
-    "        \n",
     "        #make a copy to avoid side effects\n",
     "        new_states = States(n,min_s,max_s)\n",
     "        \n",
@@ -140,138 +124,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yo\n",
-      "6\n",
-      "6\n",
-      "[3. 1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_function(states, values):\n",
     "    \"\"\"returns a function\n",
     "    the function uses the grid data to figure out return value\"\"\"\n",
     "    f = lambda eval_states: griddata(states.get_all(), values, \n",
     "                                     eval_states.get_all(), method='linear')\n",
-    "    return f\n",
-    "\n",
-    "\n",
-    "states = States(3,1,3)\n",
-    "states.gen_states()\n",
-    "new_states = states.make_states([1,2],[[1.5,1],[1,5]])\n",
-    "values = np.concatenate([3*np.ones(states.get_len()/2),np.ones(states.get_len()/2)])\n",
-    "print len(values)\n",
-    "print states.get_len()\n",
-    "policy = create_function(states, values)\n",
-    "print policy(new_states)"
+    "    return f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 1 1]\n",
-      " [1 1 2]\n",
-      " [1 2 2]\n",
-      " [2 1 1]\n",
-      " [2 1 2]\n",
-      " [2 2 2]]\n",
-      "[[5 5]\n",
-      " [5 5]\n",
-      " [5 5]\n",
-      " [5 5]\n",
-      " [5 5]\n",
-      " [5 5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def calc_bids(policy, states, n):\n",
+    "def calc_bids(policy, states):\n",
     "    \"\"\"return the other players bids\n",
-    "    given the state\"\"\"\n",
+    "    given the state by 'switching perspective'\n",
+    "    to other firm\"\"\"\n",
     "    \n",
     "    other_bids = []\n",
-    "    for i in range(1,n):\n",
+    "    for i in range(1,states.n):\n",
     "        other_states = states.get_all()\n",
     "        my_other = other_states[:,i]\n",
     "        other = np.delete(other_states, i, axis=1)\n",
-    "        other_states = States(my_other, other)\n",
+    "        other_states = states.make_states(my_other, other)\n",
     "        other_bids.append( policy(other_states) )\n",
     "    return np.array(other_bids).transpose()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.1 1.1 2.2]\n",
+      "[-0.1  0.9  0.8]\n",
+      "[[1.  1.  1.5]\n",
+      " [1.  1.  2. ]\n",
+      " [2.  1.  2. ]]\n"
+     ]
+    }
+   ],
    "source": [
+    "def cost(states, shock,theta):\n",
+    "    \"\"\"return the cost for firm 0\"\"\"\n",
+    "    return theta*states.my_states + shock\n",
     "\n",
     "\n",
-    "    \n",
+    "def profit(bids, states, contract, shock, theta):\n",
+    "    \"\"\"return firm 0's profit\"\"\"\n",
+    "    my_bids = bids[:,0]\n",
+    "    other_bids = np.delete(bids,0,axis=1)\n",
+    "    profits = contract*( my_bids < np.min(other_bids, axis=1) )*(my_bids - cost(states,shock,theta))  \n",
+    "    return profits\n",
     "\n",
-    "    \n",
-    "    \n",
-    "def cost(states, shock):\n",
-    "    \"\"\" states are all states, the shock is just an integer\"\"\"\n",
-    "    return THETA*states + shock\n",
+    "\n",
+    "def update_state(bids, states, contract):\n",
+    "    \"\"\"update all firms states based on bids\"\"\"\n",
+    "    new_states = contract*(  bids< np.min(bids) ) + states.get_all()\n",
+    "    return states.make_states(new_states[:,0],np.delete(new_states,0,axis=1))\n",
     "\n",
     "\n",
-    "def profit(contract, my_bid, other_bids, state, shock):\n",
-    "    \"\"\"this returns the same dimension as my bid\n",
-    "    \n",
-    "    will need to tile bids if evaluating multiple at once\"\"\"\n",
-    "    return contract*( my_bid < np.min(other_bids) )*( my_bid - cost(state,shock) )  "
+    "##### unit testing\n",
+    "\n",
+    "#make some bids\n",
+    "bids = np.array([1,2,3])\n",
+    "\n",
+    "#make some states\n",
+    "states = States(3,1,3)\n",
+    "states.gen_states()\n",
+    "new_states = states.make_states([1,1,2],[[1.5,1],[1,5],[1,4.3]])\n",
+    "\n",
+    "#make a policy\n",
+    "values = np.concatenate([6*np.ones(states.get_len()/2),8*np.ones(states.get_len()/2)])\n",
+    "policy = create_function(states, values)\n",
+    "\n",
+    "#learn mkt outcome for others\n",
+    "other_bids = calc_bids(policy, new_states)\n",
+    "all_bids = bids.reshape(len(bids),1)\n",
+    "all_bids = np.concatenate((all_bids,other_bids), axis=1)\n",
+    "\n",
+    "#tests\n",
+    "print cost(new_states,0,1.1)\n",
+    "print profit(all_bids,new_states,1,0,1.1)\n",
+    "print update_state(all_bids,new_states,1.1).get_all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def backlog(contract, my_bid,  other_bids, state):\n",
-    "    \"\"\"this returns the same dimension as my bid\n",
-    "    \n",
-    "     will need to tile bids if evaluating multiple at once\"\"\"\n",
-    "    \n",
-    "    ##tile the other bids so that I can evalute this expression for each bid\n",
-    "    #tile the states so I can evaluate this expression for each bid at each state\n",
-    "    \n",
-    "    return np.minimum( np.max(STATES), contract*(  my_bid < np.min(other_bids) ) + state )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def operator(initial_value, initial_policy):\n",
-    "    \"\"\"Calculate the value of the \n",
-    "    Bellman operator in the value function\n",
-    "    \n",
-    "    update the value function and the policy function\n",
-    "    for player i functions\n",
+    "def operator(v_init, p_init, bids, states, theta, beta):\n",
+    "    \"\"\"update the value and the policy function for player 0\n",
     "    \n",
     "    since we are looking for symmetric eq, there is really just 1\n",
     "    policy and value to keep track of\"\"\"\n",
@@ -280,29 +235,45 @@
     "    contract = 1\n",
     "    shock = 0\n",
     "    \n",
-    "    #possible bids for all states, again 1 player\n",
-    "    bids = BIDS.reshape((len(BIDS), 1, ))\n",
-    "    bids = np.tile(bids,(1,len(STATES)))\n",
+    "    #repeat bids/states per each bid\n",
+    "    my_bids = np.repeat(bids,states.get_len())\n",
+    "    bid_states = states.get_all()\n",
+    "    bid_states = np.tile(bid_states,(len(bids),1))\n",
+    "    bid_states = states.make_states(bid_states[:,0],np.delete(bid_states,0,axis=1))\n",
     "    \n",
+    "    #other bids in each bid state and concat with my bids\n",
+    "    other_bids = calc_bids(p_init, bid_states)\n",
+    "    all_bids = my_bids.reshape(len(my_bids),1)\n",
+    "    all_bids = np.concatenate((all_bids,other_bids), axis=1)\n",
     "    \n",
-    "    #calculate value of each bid and take max in each state\n",
-    "    v_next = profit(contract,bids,other_bids,states,shock)\n",
-    "    v_next = v_next + BETA*value(backlog(contract, bids, other_bids, states))\n",
+    "    #calculate see how the states would update\n",
+    "    next_states = update_state(all_bids, bid_states, contract)\n",
     "    \n",
-    "    #find maximum and argmax\n",
-    "    policy = np.argmax(v_next,axis=0)\n",
-    "    policy = BIDS[policy]\n",
-    "    v_next = np.max(v_next,axis=0)\n",
+    "    #calculate the value of the next state\n",
+    "    v_new = profit(all_bids, bid_states, contract,  shock, theta)\n",
+    "    v_new = v_new + beta*v_init(next_states)\n",
     "    \n",
-    "    return policy, v_next\n",
+    "    #reshape v_new to find argmax\n",
+    "    v_new = v_new.reshape((len(bids),states.get_len()))\n",
+    "    \n",
+    "    policy = np.argmax(v_new,axis=1)\n",
+    "    policy = bids[policy]\n",
+    "    policy = create_function(states, policy)\n",
+    "    \n",
+    "    value = create_function(states, v_new)\n",
+    "    \n",
+    "    return policy, value\n",
     "\n",
+    "#make some states/bids\n",
+    "bids = np.arange(1,6)\n",
+    "states = States(3,1,3)\n",
+    "states.gen_states()\n",
     "\n",
+    "#make a policy\n",
+    "values = np.concatenate([6*np.ones(states.get_len()/2),8*np.ones(states.get_len()/2)])\n",
+    "policy = create_function(states, values)\n",
     "\n",
-    "#initialize policy as something else\n",
-    "foo_policy = lambda state: 5\n",
-    "foo_value = lambda state: 0\n",
-    "\n",
-    "operator(foo_value, foo_policy)"
+    "policy, value = operator(policy, policy, bids, states, 1.1, 0)"
    ]
   },
   {
@@ -311,7 +282,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def  value_function(initial_value, error, maxiter):\n",
+    "def graph_functions():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def  markov_perfect_eq(initial_value, error, maxiter):\n",
     "    \"\"\"calculate the value function in a symmetric\n",
     "        markov perfect equilibria\"\"\"\n",
     "    \n",
