--- a/cond_mix.ipynb
+++ b/cond_mix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4050, 1)\n",
+      "(3926, 2)\n",
+      "(3987, 1)\n",
+      "(3202, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print data[['WW']].dropna().shape\n",
+    "print data[['WW','FMO']].dropna().shape\n",
+    "print data[['LFW']].dropna().shape\n",
+    "print data[['LFC']].dropna().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -96,8 +119,8 @@
       "Dep. Variable:                     WW   R-squared:                       0.034\n",
       "Model:                            OLS   Adj. R-squared:                  0.034\n",
       "Method:                 Least Squares   F-statistic:                     138.9\n",
-      "Date:                Sun, 21 Apr 2019   Prob (F-statistic):           1.60e-31\n",
-      "Time:                        19:30:51   Log-Likelihood:                 3793.9\n",
+      "Date:                Mon, 22 Apr 2019   Prob (F-statistic):           1.60e-31\n",
+      "Time:                        11:58:31   Log-Likelihood:                 3793.9\n",
       "No. Observations:                3925   AIC:                            -7584.\n",
       "Df Residuals:                    3923   BIC:                            -7571.\n",
       "Df Model:                           1                                         \n",
@@ -130,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
